<?xml version="1.0"?>
<package format="2">
  <name>ros_tutor</name>
  <version>0.0.0</version>
  <description>The ros_tutor package</description>
  <maintainer email="systp@todo.todo">systp</maintainer>
  <license>TODO</license>


  <!-- Default Package Depend From Calling Catkin_Create_Pkg name std_msgs roscpp rospy -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- ADD THIS FOR GENERATE MSG -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
